Bug #19214 running mysqld without binlog causes 10s timeout to drigger on schema ops
Submitted: 20 Apr 2006 12:47 Modified: 22 Apr 2006 16:56
Reporter: Tomas Ulin
Status: Closed
Category:Server: Cluster Severity:S1 (Critical)
Version:5.1.9-> OS:
Assigned to: Tomas Ulin Target Version:

[20 Apr 2006 12:47] Tomas Ulin
Description:
start mysqld without --log-bin and enable ndb

create and drop a ndb table
look in error log

you will see something like "create... : Timed out. Ignoring..."

How to repeat:
see above
[21 Apr 2006 9:36] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/5258
[21 Apr 2006 16:44] Tomas Ulin
pushed to 5.1.10
[22 Apr 2006 16:56] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented bugfix in 5.1.10 changelog; closed.