Bug #19214  	running mysqld without binlog causes 10s timeout to drigger on schema ops - binlog thread should not wait for apply status share if binlog is not enabled